Fix NoScript Preview to work for HTTP nav that resolves to HTTPS

This change now sets the NOSCRIPT_ON bit in PreviewsState at the
beginning of a HTTP navigation (as well as HTTPS). It then checks
the final URL in GetNavigationData() and clears the bit if not
HTTPS.

Note: the NOSCRIPT_ON bit will only be set if the dev flag
for it is enabled (ie, not default behavior).

Bug: 787115
Change-Id: Ie330e34c722c07271648f7370dfacc81495ec97b