chrome/browser/previews/previews_infobar_tab_helper.cc
@@ -142,8 +142,7 @@ void PreviewsInfoBarTabHelper::DidFinishNavigation(
   if (nav_data) {
     previews::PreviewsType main_frame_preview =
         previews::GetMainFramePreviewsType(nav_data->previews_state());
-    if (main_frame_preview != previews::PreviewsType::NONE &&
-        main_frame_preview != previews::PreviewsType::LITE_PAGE) {
+    if (main_frame_preview == previews::PreviewsType::NOSCRIPT) {
       PreviewsInfoBarDelegate::Create(
           web_contents(), main_frame_preview,
           base::Time() /* previews_freshness */, true /* is_data_saver_user */,
